--- a/index.html
+++ b/index.html
@@ -16,17 +16,20 @@
             background-size: cover;
             background-position: center;
             font-family: 'Arial', sans-serif;
-            color: white;
+            color: #342930;
             text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
         }
         .countdown {
             text-align: center;
         }
         h1 {
-            font-size: 50px;
+            font-size: 80px;
+            margin: 0;
+            line-height: 1.1; 
         }
         p {
-            font-size: 24px;
+            font-size: 50px;
+             margin: 10px 0 0 0;
         }
     </style>
 </head>
