--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('background image2.png'); /* Change to your desired background */
+            background-image: url('background image2.png');
             background-size: cover;
             background-position: center;
             font-family: 'Arial', sans-serif;
