--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background-image: url('background image3.png');
             background-size: cover;
             background-position: center;
-            font-family: 'Arial', sans-serif;
+            font-family: 'segoe ui', segoe UI;
             color: #342930;
             text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
         }
@@ -48,7 +48,7 @@
             const daysLeft = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
 
             const countdownText = document.getElementById('countdownText');
-            countdownText.textContent = `${daysLeft} Days`;
+            countdownText.textContent = `${daysLeft} DAYS`;
         }
 
         updateCountdown();
