--- a/index.html
+++ b/index.html
@@ -12,12 +12,11 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('background image4.png');
+            background-image: url('5.png');
             background-size: cover;
             background-position: center;
             font-family: 'segoe ui', segoe UI;
             color: #342930;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.7);
         }
         .countdown {
             text-align: center;
