--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-image: url('5.png');
+            background-image: url('6.png');
             background-size: cover;
             background-position: center;
-            font-family: 'segoe ui', segoe UI;
-            color: #342930;
+            font-family: 'segoe ui', segoe ui;
+            color: #ca2026;
         }
         .countdown {
             text-align: center;
         }
         h1 {
-            font-size: 80px;
+            font-size: 70px;
             margin: 0;
             line-height: 1.1; 
         }
         p {
-            font-size: 50px;
+            font-size: 35px;
              margin: 10px 0 0 0;
         }
     </style>
