--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
             text-align: center;
         }
         h1 {
-            font-size: 40px;
+            font-size: x-large;
             margin: 0;
             line-height: 1.1; 
         }
         p {
-            font-size: 15px;
+            font-size: large;
              margin: 10px 0 0 0;
         }
     </style>
