--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             background-image: url('6.png');
             background-size: cover;
             background-position: center;
-            font-family: 'segoe ui', segoe ui;
+            font-family: 'Sans-Serif', Sans-Serif;
             color: #ca2026;
         }
         .countdown {
